add_subdirectory(autowrapper)
add_subdirectory(contextmgr)
add_subdirectory(datetime)
add_subdirectory(debugger)
add_subdirectory(scriptany)
add_subdirectory(scriptarray)
add_subdirectory(scriptbuilder)
add_subdirectory(scriptdictionary)
add_subdirectory(scriptfile)
add_subdirectory(scriptgrid)
add_subdirectory(scripthandle)
add_subdirectory(scripthelper)
add_subdirectory(scriptmath)
add_subdirectory(scriptstdstring)
add_subdirectory(serializer)
add_subdirectory(weakref)
